add retrieving student's gpa and percentile
